# BikeRoutes

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  REFACTOR_MISSING.md  app.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build-android.yml  ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260213_0001_create_users_and_refresh_tokens.py  20260311_0002_add_google_sub_to_users.py  9f2c0b1f6b5a_routes_markers.py  ce2e3d9acf16_merge_heads.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  router.py  routes.py
backend/app/auth/: __init__.py  contracts.py  dependencies.py  deps.py  google.py  jwt.py  models.py  passwords.py  tokens.py
backend/app/core/: rate_limit.py  settings.py
backend/app/db/: __init__.py  session.py
backend/app/geo/: geojson.py
backend/app/models/: __init__.py  marker.py  route.py
backend/app/schemas/: geojson.py  routes.py
backend/scripts/: init-test-db.sh
backend/tests/: conftest.py  test_auth.py  test_markers.py  test_routes.py
docs/: AGENTS_PLAN.md  API.md  DEPLOYMENT.md  DEV.md  SHARING_MINIMUM_NOTES.md
docs/reviews/: fastapi-review.md  qa-report.md
frontend/mobile/: App.tsx  app.json  (+3 more)
infra/: Dockerfile.tileserver  README.md  config.json  docker-compose.prod.yml  docker-compose.tiles.yml
maps/: README.md
pr/: agent-backend-auth.md  agent-infra.md  agent-mobile-ui-d1.md  agent-review-react-native-fixes.md
scripts/: dev-backend.sh  dev-mobile.sh  dev-web.sh
(+87 files in other folders)
